<resources>
    <string name="app_name">PetSocial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password_min_6_character">Password(min 6 character)</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="your_pet_name">Evcil Hayvanınızın İsmi</string>
    <string name="for_your_pet_s_social_life">For Your Pet\'s Social Life</string>
    <string name="update">Güncelle</string>
    <string name="logout">Çıkış Yap</string>
    <string name="birthday">Doğum Tarihi</string>
    <string name="age_input">Yaş Giriniz</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="post_advert">İlanı Yayınla</string>
    <string name="cat">Kedi</string>
    <string name="dog">Köpek</string>
    <string name="estrus_period">Kızgınlık Dönemi</string>
    <string name="vac_info">Aşı Bilgileri</string>
    <string name="age_info">Yaş</string>
    <string name="genius_info">Cins</string>
    <string name="animal_type">Tür</string>
    <string name="contact_user">İletişime Geç</string>
    <string name="profile_picture">Profil Resmi</string>
    <string name="report_user">Kullanıcıyı Bildir</string>
    <string name="block_user">Kullanıcıyı Engelle</string>


</resources>